[tool.poetry]
name = "booking-reservation-cancelation"
version = "0.1.0"
description = ""
authors = ["ergunserter <ergunserter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
xgboost = "^2.0.3"
shap = "^0.45.1"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
causal-learn = "^0.1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
